--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -112,9 +112,15 @@
         </div>
         <div id="field">Reply Received  <input type="checkbox" ng-model="stageattrs.interviewReplyReceived" required></div>
         <br>
-        <input type="submit" ng-click="pushToStages($index)" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+        <button type="submit" ng-click="pushToStages($index)" class="btn btn-warning">Submit Stage</button>
       </div>
 
     </div><!-- Closing row -->
+    <br>
+    <div class='btn-group'>
+      <button class='btn btn-warning' ng-click='removeStage($index)'>Remove Stage</button>
+      <button class='btn btn-danger'ng-click='delete($index)'>Delete This Application</button>
+    </div>
+    <hr>
   </ul> <!-- closing ng-repeat Application -->
 </div> <!-- Closing ALL APPLICATION VIEW-->
