style(CSS): Clean log in page

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,40 +1,40 @@
-<div id = "logInView">
+<div class = "auth">
+  <!-- Sign Up Form Input Fields -->
+  <form class="form-signin" name="signInForm" ng-submit="signin(signInForm.$valid)" novalidate>
+    <h2 class="form-signin-heading">Login</h2>
+    <!-- Email: Required field, has to be validated -->
+    <div ng-class="{ 'has-error' : signInForm.username.$invalid && !signInForm.username.$pristine }">
 
-  <!--Page Title -->
-  <div class="page-header"><h1>Login</h1></div>
+      <label class="sr-only">Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="text" name="username" placeholder="Username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20" required autofocus>
 
-  <div class ="col-md-offset-2 col-md-10">
+    </div>
 
-    <!-- Sign Up Form Input Fields -->
-    <form name="signInForm" ng-submit="signin(signInForm.$valid)" novalidate>
+    <!-- Password: Required field, has to be validated -->
+    <div ng-class="{ 'has-error' : signInForm.password.$invalid && !signInForm.password.$pristine }">
 
-      <!-- Email: Required field, has to be validated -->
-      <div class="form-group" ng-class="{ 'has-error' : signInForm.username.$invalid && !signInForm.username.$pristine }">
+      <label class="sr-only">Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="password" name="password" placeholder="Password" class="form-control" ng-model="user.password" required>
 
-        <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
+    </div>
 
-        <!-- Invalid input error message -->
-        <p ng-show="signInForm.username.$error.minlength" class="help-block">Username is too short.</p>
-        <p ng-show="signInForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-      </div>
+    <!-- Form validation Error messages -->
+    <div>
+      <!-- Username: Required field, has to be validated -->
+      <p ng-show="signInForm.username.$error.minlength" class="help-block">Username is too short.</p>
+      <p ng-show="signInForm.username.$error.maxlength" class="help-block">Username is too long.</p>
 
       <!-- Password: Required field, has to be validated -->
-      <div class="form-group" ng-class="{ 'has-error' : signInForm.password.$invalid && !signInForm.password.$pristine }">
+      <p ng-show="signInForm.password.$invalid && !signInForm.password.$pristine" class="help-block">Please Enter a password</p>
+      <br />
+    </div>
 
-        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="password" name="password" class="form-control" ng-model="user.password" required>
+    <button type="submit" class="btn btn-lg btn-primary btn-block" ng-disabled="signInForm.$invalid">Log In</button>
 
-        <!-- Invalid input error message -->
-        <p ng-show="signInForm.password.$invalid && !signInForm.password.$pristine" class="help-block">Please Enter a password</p>
-      </div>
+    <div>
+      <br />
+      <p>Need an account? <a href="/#!/signup">Sign up</a></p>
+    </div>
 
-      <button type="submit" class="btn btn-primary" ng-disabled="signInForm.$invalid">Log In</button>
-
-    </form> <!-- Closing Log In From Input Fields -->
-
-    <br>
-    <p class ="col-md-offset-1 col-md-10">Need an account? <a href="/#!/signup">Sign up</a></p>
-
-  </div>  <!-- Closing Bootstrap Grid div -->
-</div> <!-- Closing logInView -->
+  </form> <!-- Closing Log In From Input Fields -->
+</div> <!-- Closing Auth Div -->
