--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -82,9 +82,9 @@
       <div id="stage-name" ng-repeat="stage in results[$index].stages track by $index" ng-model="results">
         <div id="card-title"><strong>Stage {{$index + 1}}</strong><br></div>
         <div id="field"><strong>Interview Type:</strong><br>{{stage.interviewType}}</div>
-        <div id="field"><strong>Date:</strong><br>{{stage.interviewCompletedDate}}</div>
+        <div id="field"><strong>Date:</strong><br>{{stage.interviewCompletedDate.slice(0,10)}}</div>
         <div id="field"><strong>Primary Interviewer Type:</strong><br>{{stage.interviewerType}}</div>
-        <div id="field"><strong>Last Follow Up Date:</strong><br>{{stage.dateOfLastFollowUp}}</div>
+        <div id="field"><strong>Last Follow Up Date:</strong><br>{{stage.dateOfLastFollowUp.slice(0,10)}}</div>
         <div id="field"><strong>Reply Received:</strong><br>{{stage.interviewReplyReceived}}</div>
       </div>
 
