--- a/client/app/login/signup.html
+++ b/client/app/login/signup.html
@@ -1,49 +1,48 @@
 <div class = "auth">
 
-  <!--Page Title -->
-  <div class="page-header"><h1>Signup</h1></div>
+  <!-- Sign Up Form Input Fields -->
+  <form class="form-signin" name="signUpForm" ng-submit="signup(signUpForm.$valid)" novalidate>
 
-  <div class ="col-md-offset-2 col-md-10">
+    <!-- Sign Un Page Title -->
+    <h2 class="form-signin-heading">Sign Up</h2>
 
-    <!-- Sign Up Form Input Fields -->
-    <form name="signUpForm" ng-submit="signup(signUpForm.$valid)" novalidate>
+    <!-- USERNAME: Required field, has to be longer than 6 char, less than 20 -->
+    <div ng-class="{ 'has-error' : signUpForm.username.$invalid && !signUpForm.username.$pristine }">
+      <label class="sr-only">Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="text"  placeholder="Username" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20" required autofocus>
+    </div>
 
-      <!-- USERNAME: Required field, has to be longer than 6 char, less than 20 -->
-      <div class="form-group" ng-class="{ 'has-error' : signUpForm.username.$invalid && !signUpForm.username.$pristine }">
+    <!-- Email: Required field, has to be validated -->
+    <div ng-class="{ 'has-error' : signUpForm.email.$invalid && !signUpForm.email.$pristine }">
+      <label class="sr-only">Email<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="email" placeholder="Email" name="email" class="form-control" ng-model="user.email" required>
+    </div>
 
-        <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
+    <!-- Password: Required field, has to be validated -->
+    <div ng-class="{ 'has-error' : signUpForm.password.$invalid && !signUpForm.password.$pristine }">
+      <label class="sr-only">Password<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="password" placeholder="Password" name="password" class="form-control" ng-model="user.password" required>
+    </div>
 
-        <!-- Invalid input error message -->
-        <p ng-show="signUpForm.username.$error.minlength" class="help-block">Username is too short.</p>
-        <p ng-show="signUpForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-      </div>
+    <!-- Form validation Error messages -->
+    <div>
+      <!-- Invalid Username error message -->
+      <p ng-show="signUpForm.username.$error.minlength" class="help-block">Username is too short.</p>
+      <p ng-show="signUpForm.username.$error.maxlength" class="help-block">Username is too long.</p>
 
-      <!-- Email: Required field, has to be validated -->
-      <div class="form-group" ng-class="{ 'has-error' : signUpForm.email.$invalid && !signUpForm.email.$pristine }">
+      <!-- Invalid Email error message -->
+      <p ng-show="signUpForm.email.$invalid && !signUpForm.email.$pristine" class="help-block">Enter a valid email.</p>
 
-        <label>Email<img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="email" name="email" class="form-control" ng-model="user.email" required>
+      <!-- Invalid Password error message -->
+      <p ng-show="signUpForm.password.$invalid && !signUpForm.password.$pristine" class="help-block">Not a valid password</p>
+      <br />
+    </div>
 
-        <!-- Invalid input error message -->
-        <p ng-show="signUpForm.email.$invalid && !signUpForm.email.$pristine" class="help-block">Enter a valid email.</p>
-      </div>
+    <button type="submit" class="btn btn-lg btn-primary btn-block" ng-disabled="signUpForm.$invalid">Sign Up</button>
 
-      <!-- Password: Required field, has to be validated -->
-      <div class="form-group" ng-class="{ 'has-error' : signUpForm.password.$invalid && !signUpForm.password.$pristine }">
-
-        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="password" name="password" class="form-control" ng-model="user.password" required>
-
-        <!-- Invalid input error message -->
-        <p ng-show="signUpForm.password.$invalid && !signUpForm.password.$pristine" class="help-block">Not a valid password</p>
-      </div>
-
-      <button type="submit" class="btn btn-primary" ng-disabled="signUpForm.$invalid">Sign Up</button>
-    </form>  <!-- Closing Sign Up From Input Fields -->
-
-    <br />
-    <p class ="col-md-offset-1 col-md-10">Already have an account? <a href="/#!/login">Log in</a></p>
-
-  </div>  <!-- Closing Bootstrap Grid div -->
+    <div>
+      <br />
+      <p>Already have an account? <a href="/#!/login">Log in</a></p>
+    </div>
+  </form>  <!-- Closing Sign Up From Input Fields -->
 </div> <!-- Closing singUpView -->
