--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -31,7 +31,7 @@
       <div ng-controller="UploadController">
           <label>Cover Letter Upload</label>
           <div ngf-drop ngf-select ng-model="file" class="drop-box"
-              ngf-drag-over-class="'dragover'" ngf-allow-dir="true"
+              ngf-drag-over-class="'dragover'"
               >Drop file here to upload</div>
       </div>
 
