style(button colors): new color for buttons
new color for buttons

--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -83,7 +83,7 @@
       </div>
 
       <!-- Add Button -->
-      <button class='btn btn-warning' ng-disabled="addNewApp.$invalid">Add</button>
+      <button class='btn btn-info' ng-disabled="addNewApp.$invalid">Add</button>
 
     </form> <!-- Closing ADD NEW APPLICATION FORM INPUT FIELDS -->
   </div> <!-- Closing Bootstrap div for new application form -->
