--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -112,14 +112,14 @@
         </div>
         <div id="field">Reply Received  <input type="checkbox" ng-model="stageattrs.interviewReplyReceived" required></div>
         <br>
-        <button type="submit" ng-click="pushToStages($index)" class="btn btn-warning">Submit Stage</button>
+        <button type="submit" ng-click="pushToStages($index)" class="btn btn-info">Submit Stage</button>
       </div>
 
     </div><!-- Closing row -->
     <br>
     <div class='btn-group'>
-      <button class='btn btn-warning' ng-click='removeStage($index)'>Remove Stage</button>
-      <button class='btn btn-danger'ng-click='delete($index)'>Delete This Application</button>
+      <button class='btn btn-info' ng-click='removeStage($index)'>Remove Stage</button>
+      <button class='btn btn-primary'ng-click='delete($index)'>Delete This Application</button>
     </div>
     <hr>
   </ul> <!-- closing ng-repeat Application -->
