--- a/client/app/completedApps/completedApps.html
+++ b/client/app/completedApps/completedApps.html
@@ -90,7 +90,7 @@
     </div><!-- Closing row -->
     <br>
     <div class='btn-group'>
-      <button class='btn btn-danger'ng-click='delete($index)'>Delete This Application</button>
+      <button class='btn btn-primary'ng-click='delete($index)'>Delete This Application</button>
     </div>
     <hr>
   </ul> <!-- closing ng-repeat Application -->
