--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">All Apps <span class="sr-only">(current)</span></a></li>
             <li><a href="/#!/addApps">Add App</a></li>
-            <li><a href="/#!/completedApps">Completed App</a></li>
+            <li><a href="/#!/completedApps">Completed Apps</a></li>
           </ul>
 
           <!-- NAV BAR RIGHT -->
