--- a/client/index.html
+++ b/client/index.html
@@ -42,20 +42,20 @@
         <!-- NAV BAR -->
         <div id="navbar" class="navbar-collapse collapse" uib-collapse="navCollapsed">
 
-          <!-- NAV BAR LEFT -->
-          <ul class="nav navbar-nav">
-            <li><a href="/">All Apps <span class="sr-only">(current)</span></a></li>
-            <li><a href="/#!/completedApps">Completed Apps</a></li>
-            <li><a href="/#!/addApps">Add App</a></li>
-          </ul>
+          <div ng-controller="AuthController">
+            <!-- NAV BAR LEFT -->
+            <ul class="nav navbar-nav">
+              <li ng-hide='!isAuth()'><a href="/">All Apps <span class="sr-only">(current)</span></a></li>
+              <li ng-hide='!isAuth()'><a href="/#!/completedApps">Completed Apps</a></li>
+              <li ng-hide='!isAuth()'><a href="/#!/addApps">Add App</a></li>
+            </ul>
 
           <!-- NAV BAR RIGHT -->
-          <div ng-controller="AuthController">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/#!/login" class="mdl-navigation__link" ng-click="signout()" ng-hide='!isAuth()'>Log Out</a></li>
             </ul>
-          </div> <!-- Closing AuthController -->
 
+          </div> <!-- Closing AuthController -->
         </div><!--/.nav-collapse -->
       </div> <!-- Closing NAV BAR container -->
     </nav> <!-- CLOSING GLOBAL NAV BAR FIXED TOP -->
