style(add fonts):

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -4,7 +4,7 @@
   <form class="form-signin" name="signInForm" ng-submit="signin(signInForm.$valid)" novalidate>
 
     <!-- Log In Page Title -->
-    <h2 class="form-signin-heading">Login</h2>
+    <h2 class="form-signin-heading">Log In</h2>
     <!-- Email: Required field, has to be validated -->
     <div ng-class="{ 'has-error' : signInForm.username.$invalid && !signInForm.username.$pristine }">
 
