--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
-    <title>HoHTrak</title>
+
+    <title>AppTrak</title>
     <base href="/" />
 
     <!-- MATERIAL IO SCRIPTS BELOW -->
@@ -36,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">HoHTrak</a>
+          <a class="navbar-brand" href="/">App|Trak</a>
         </div>
 
         <!-- NAV BAR -->
