--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -5,20 +5,23 @@
   <div class="page-header"><h3>Open Applications</h3></div>
 
   <!-- Application Search -->
-
-  <form name='searchAllApps' class="form-group">
-    <label for ="searchAllApps">Search Open Applications</label>
-    <div class = "input-group">
+  <div align='center'>
+  <form name='searchAllApps'>
+    <!-- <label for ="searchAllApps">Search Open Applications</label> -->
+    <div class = "form-group">
 
       <!-- Input Field / Search Bar  -->
       <input
         type='text',
         name='searchAllAppsQuery',
         ng-model='searchText',
-        class="form-control"/>
+        class="form-control",
+        placeholder='Search Open Applications...'
+        />
 
     </div> <!-- Closing input-group -->
   </form> <!-- Closing from group -->
+  <div>
 
   <!-- ng-repeat APPLICATIONS. It has 1) Open Position Card, 2) Add Stage Card -->
   <ul ng-repeat='result in results | filter:searchText track by $index' ng-model='application'>
