--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -21,7 +21,7 @@
 
     </div> <!-- Closing input-group -->
   </form> <!-- Closing from group -->
-  <div>
+  </div>
 
   <!-- ng-repeat APPLICATIONS. It has 1) Open Position Card, 2) Add Stage Card -->
   <ul ng-repeat='result in results | filter:searchText track by $index' ng-model='application'>
