fix(add ui mask to index.html):

--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
     <script src="angular/angular.js"></script>
     <script src="angular-route/angular-route.js"></script>
     <script src="angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+    <script src="angular-ui-mask/dist/mask.js"></script>
     <script src="app.js"></script>
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
