--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800|Source+Sans+Pro" rel="stylesheet">
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
 
     <title>AppTrak</title>
@@ -68,7 +68,7 @@
     <div class="container-fluid">
       <br />
       <br />
-      <div class="rows" ng-view></div>
+      <div class="rows" id='ng-view' ng-view></div>
 
     </div> <!-- Closing CONTAINER for NG-VIEW components -->
 
