--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -29,7 +29,7 @@
 
       <!-- 1) Open Position Card, has 5 fields -->
       <!-- i) COMPANY, ii) ROLE, iii) JOB DESC, iv) APPLIED THRU, v) CONTACTS-->
-      <li id="card">
+      <li id="card" style="overflow:scroll">
         <div id="card-title"><strong>Application</strong><br></div>
         <div><span>{{result.dateApplied.slice(0,10)}}</span></div>
 
@@ -61,13 +61,16 @@
         <div id="field" ng-click="enableEditor($index)"><strong>Contact Name:</strong><br>
           <span ng-hide="edit.editorEnabled">{{result.contactName}}</span>
         </div>
+        <div ng-show="edit.editorEnabled">
+          <input ng-model="edit.contactName" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
+        </div>
 
         <!-- v) CONTACT EMAIL -->
         <div id="field" ng-click="enableEditor($index)"><strong>Contact Email:</strong><br>
           <span ng-hide="edit.editorEnabled">{{result.contactEmail}}</span>
         </div>
         <div ng-show="edit.editorEnabled">
-          <input ng-model="edit.appliedThrough" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
+          <input ng-model="edit.contactEmail" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
         </div>
 
         <!-- vi) CONTACT PHONE -->
@@ -75,15 +78,11 @@
           <span ng-hide="edit.editorEnabled">{{result.contactPhone}}</span>
         </div>
         <div ng-show="edit.editorEnabled">
-          <input ng-model="edit.appliedThrough" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
-        </div>
-
-        <div ng-show="edit.editorEnabled">
-          <input ng-model="edit.contactName" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
+          <input ng-model="edit.contactPhone" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
         </div>
 
         <!-- Save Button -->
-        <button ng-click="save($index, edit)" ng-show="edit.editorEnabled">Save</button>
+        <button class='btn btn-info' id='btn-info' ng-click="save($index, edit)" ng-show="edit.editorEnabled">Save</button>
 
       </li><!-- Closing Open Position Card -->
 
