style(Form CSS): Normalize form tag CSS
Search bar spans full width, preserve form width in addApp

--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -1,10 +1,10 @@
 <!-- ADD APP VIEW using FormController-->
-<div id="addAppView">
+<div class="col-md-8 col-md-offset-2">
 
   <!--  ADD APP VIEW Title -->
   <div class="page-header"><h3>New Application</h3></div>
 
-  <div class ="col-md-offset-2 col-md-10"> <!-- Bootstrap div for new application form-->
+  <div> <!-- Bootstrap div for new application form-->
 
     <!-- ADD NEW APPLICATION FORM INPUT FIELDS -->
     <form name='addNewApp' method='post' ng-submit="submitForm(addNewApp.$valid)" novalidate>
